--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html, body, #root {
   padding: 0;
   margin: 0;
   height: 100%;
-  background-image: url('/images/forest.jpg');
+  background-image: url('https://github.com/zcdev/clicky-owls/blob/master/public/images/forest.jpg?raw=true');
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
