--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -6,7 +6,6 @@
   padding: 20px;
   justify-content: space-around;
   align-content: flex-start;
-  overflow: auto;
   max-width: 1240px;
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
 }
