--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,10 +1,10 @@
 .wrapper {
-  padding-top: 50px;
+  padding: 50px 0;
   display: flex;
   flex-flow: row wrap;
   padding: 20px;
   justify-content: space-around;
   align-content: flex-start;
   max-width: 1240px;
-  margin: 0 auto 20px auto;
+  margin: 0 auto;
 }
